[gd_scene load_steps=17 format=3 uid="uid://bsv8xxwo38t8m"]

[ext_resource type="Script" path="res://scripts/MoveComponent.gd" id="1_yb6co"]
[ext_resource type="Texture2D" uid="uid://co7ffqvnfymu" path="res://assets/entities/Badperson32full.png" id="2_gjioa"]
[ext_resource type="PackedScene" uid="uid://ctn8s6hg8toiu" path="res://scenes/components/CollisionComponent.tscn" id="3_wqfps"]
[ext_resource type="Script" path="res://scenes/crossers/Person.gd" id="4_0wgmr"]
[ext_resource type="PackedScene" uid="uid://b3bw5liu8eq7e" path="res://scenes/components/ScoreComponent.tscn" id="5_6e66h"]
[ext_resource type="AudioStream" uid="uid://bu0i02phseyc6" path="res://assets/audio/Person_Collision.wav" id="6_7yjuo"]
[ext_resource type="FontFile" uid="uid://d0jrm5b22wpwa" path="res://assets/fonts/Pixeboy-z8XGD.ttf" id="7_5kdvx"]
[ext_resource type="PackedScene" uid="uid://uhrwqjvhiby8" path="res://scenes/components/TextEmitter.tscn" id="8_4ogtx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_blmbn"]
size = Vector2(8, 16)

[sub_resource type="Animation" id="Animation_up8ee"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}

[sub_resource type="Animation" id="Animation_0fysx"]
resource_name = "default"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.176999, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_qhedc"]
resource_name = "stop"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.2001, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 26, 27, 28, 29, 30, 31, 32, 33]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dob84"]
_data = {
"RESET": SubResource("Animation_up8ee"),
"default": SubResource("Animation_0fysx"),
"stop": SubResource("Animation_qhedc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yo7xa"]
size = Vector2(8, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l0bp1"]
size = Vector2(20, 24)

[sub_resource type="LabelSettings" id="LabelSettings_73h57"]
font = ExtResource("7_5kdvx")
font_size = 8

[node name="Person" type="CharacterBody2D" node_paths=PackedStringArray("animation") groups=["Person"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_yb6co")
speed = 5000.0
direction = "RIGHT"
animation = NodePath("AnimationPlayer")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_gjioa")
hframes = 24
vframes = 2
frame = 24
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "res://assets/entities",
"o_name": "",
"only_visible": true,
"op_exp": false,
"player": "AnimationPlayer",
"source": "I:/Files/Downloads/Badperson32full.aseprite"
}

[node name="CollisionComponent" parent="." instance=ExtResource("3_wqfps")]

[node name="Hitbox" type="CollisionShape2D" parent="CollisionComponent"]
shape = SubResource("RectangleShape2D_blmbn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_dob84")
}

[node name="PersonCollision" type="CollisionShape2D" parent="." node_paths=PackedStringArray("score_comp", "move_comp", "collision_audio", "multiplier_label", "text_emitter")]
shape = SubResource("RectangleShape2D_yo7xa")
disabled = true
script = ExtResource("4_0wgmr")
score_comp = NodePath("../ScoreComponent")
move_comp = NodePath("..")
collision_audio = NodePath("../CollisionAudioPlayer")
multiplier_label = NodePath("../MultiplierLabel")
text_emitter = NodePath("../TextEmitter")
collision_score = -50
end_score = 100

[node name="ScoreComponent" parent="." instance=ExtResource("5_6e66h")]

[node name="CollisionAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_7yjuo")
volume_db = -2.81
bus = &"FX"

[node name="NearMissArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NearMissArea"]
shape = SubResource("RectangleShape2D_l0bp1")

[node name="MultiplierLabel" type="Label" parent="."]
texture_filter = 1
offset_left = -10.0
offset_top = -21.0
offset_right = 10.0
offset_bottom = -12.0
label_settings = SubResource("LabelSettings_73h57")
horizontal_alignment = 1

[node name="TextEmitter" parent="." instance=ExtResource("8_4ogtx")]

[connection signal="area_entered" from="CollisionComponent" to="PersonCollision" method="_on_collision_component_area_entered"]
[connection signal="area_exited" from="CollisionComponent" to="PersonCollision" method="_on_collision_component_area_exited"]
[connection signal="body_entered" from="CollisionComponent" to="PersonCollision" method="_on_collision_component_body_entered"]
[connection signal="body_exited" from="NearMissArea" to="PersonCollision" method="_on_near_miss_area_body_exited"]
